# Development_of_a_web_application_on_Cpp

./: All_tasks.docx
01/: CMakeLists.txt  game.cpp  gamers.hpp  main.cpp
02/: CMakeLists.txt  game.hpp  gamers.hpp
